# mortar-rs

./: .gitignore  .gitmodules  Cargo.toml  install.ps1  mortar.toml  readme.md
.devcontainer/: devcontainer.json
.github/workflows/: cd.yml  release.yml
npm/: package.json.tmpl
npm/app/: package.json
npm/mortar/: package.json
npm/mortar/src/: index.ts
src/: Parser.rs  errors.rs  formatter.rs  main.rs  make_module.rs  module_codegen.rs  mortar_lib.ts  mortar_type.rs  run_emit.rs  schema_resolver.rs  settings.rs  string_tools.rs  swagger.rs
src/module_codegen/: action_gen.rs  anon_object_definition.rs  anon_type_definition.rs  import_tracker.rs  mod.rs  named_type_definitions.rs  standalone_request_gen.rs  types_gen.rs
src/parser/: endpoint.rs  mod.rs  mortar_concrete_type.rs  mortar_module.rs  mortar_type.rs
