[package]
name = "mortar"
version = "0.0.17"
authors = ["LukeThoma5 <luke.4man@btinternet.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.12.0"
anyhow = "1.0.75"
reqwest = { version = "0.11.22", features = ["json"] }
tokio = { version = "1.34.0", features = ["full", "time"] }
futures = "0.3.29"
config = "0.13.4"
clap = { version = "4.4.11", features = ["derive"] }
dprint-plugin-typescript = "0.88.7"
self_update = "0.39.0"

serde = { version = "1.0.193", features = ["derive"] }
serde_derive = "1.0.193"
serde_json =  "1.0.108"

[dependencies.serde_with]
version = "3.4.0"
features = [ "json" ]