[package]
name = "mortar"
version = "0.1.3"
authors = ["LukeThoma5 <github@4man.dev>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.12.0"
anyhow = "1.0.75"
reqwest = { version = "0.12.4", features = ["json", "rustls-tls", "http2", "charset"], default-features = false }
tokio = { version = "1.34.0", features = ["full", "time"] }
futures = "0.3.29"
config = "0.13.4"
clap = { version = "4.4.11", features = ["derive"] }
dprint-plugin-typescript = "0.88.7"
regex = "1.10.2"

serde = { version = "1.0.193", features = ["derive"] }
serde_derive = "1.0.193"
serde_json =  "1.0.108"

[dependencies.serde_with]
version = "3.4.0"
features = [ "json" ]