[package]
name = "mortar"
version = "0.1.10"
authors = ["LukeThoma5 <github@4man.dev>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.13.0"
anyhow = "1.0.93"
reqwest = { version = "0.12.9", features = ["json", "rustls-tls", "http2", "charset"], default-features = false }
tokio = { version = "1.41.1", features = ["full", "time"] }
config = "0.14.1"
clap = { version = "4.5.21", features = ["derive"] }
dprint-plugin-typescript = "0.93.2"
regex = "1.11.1"

serde = { version = "1.0.215", features = ["derive"] }
serde_json =  "1.0.133"
